<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView android:text="@string/main_activity_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/secondary_text_dark" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_spotify_streamer_button"
        android:id="@+id/spotifyStreamerButton"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/main_activity_launcher_button"
        android:textColor="@color/main_activity_launcher_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_scores_app_button"
        android:id="@+id/scoresAppButton"
        android:layout_below="@+id/spotifyStreamerButton"
        android:layout_centerHorizontal="true"
        android:background="@drawable/main_activity_launcher_button"
        android:textColor="@color/main_activity_launcher_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_library_app_button"
        android:id="@+id/libraryAppButton"
        android:layout_below="@+id/scoresAppButton"
        android:layout_centerHorizontal="true"
        android:background="@drawable/main_activity_launcher_button"
        android:textColor="@color/main_activity_launcher_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_build_it_bigger_button"
        android:id="@+id/buildItBiggerButton"
        android:layout_below="@+id/libraryAppButton"
        android:layout_centerHorizontal="true"
        android:background="@drawable/main_activity_launcher_button"
        android:textColor="@color/main_activity_launcher_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_xyz_reader_button"
        android:id="@+id/xyzReaderButton"
        android:layout_below="@+id/buildItBiggerButton"
        android:layout_centerHorizontal="true"
        android:background="@drawable/main_activity_launcher_button"
        android:textColor="@color/main_activity_launcher_text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_capstone_button"
        android:id="@+id/capstoneButton"
        android:layout_below="@+id/xyzReaderButton"
        android:layout_centerHorizontal="true"
        android:background="@drawable/main_activity_highlight_button"
        android:textColor="@color/main_activity_launcher_text" />

</RelativeLayout>
